ingress/nginx_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-deploy
  labels:
    app: nginx-ingress-app
spec:
  replicas: 1
  selector:
    matchLabels: 
      app: nginx-ingress-app
  template:
    metadata:
      labels:
        app: nginx-ingress-app
    spec:
      containers:
        - name: nginx-ingress-app
          image: tacksimplify/kube-nginxapp1:1.0.0
          ports:
            - containerPort: 80
