ingress/nginx-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-ingress-clusterip
  labels:
    app: nginx-ingress-app
spec:
  type: ClusterIP
  selector:
    app: nginx-ingress-app
  ports:
    - port: 80
      targetPort: 80
